--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,12 +74,12 @@ figure {
   position: relative; }
 
 #colorlib-aside {
-  padding-top: 1em;
+  padding-top: 2em;
   padding-bottom: 40px;
   float: left;
-  width: 300px;
+  width: 350px;
   position: fixed;
-  overflow: scroll;
+  overflow: hidden;
   z-index: 1001;
   background: #f2f3f7;
   -webkit-transition: 0.5s;
@@ -87,13 +87,15 @@ figure {
   transition: 0.5s; }
   @media screen and (max-width: 768px) {
     #colorlib-aside {
-      width: 300px;
-      -moz-transform: translateX(-300px);
-      -webkit-transform: translateX(-300px);
-      -ms-transform: translateX(-300px);
-      -o-transform: translateX(-300px);
-      transform: translateX(-300px);
-      padding-top: 4em; } }
+      width: 350px;
+      -moz-transform: translateX(-350px);
+      -webkit-transform: translateX(-350px);
+      -ms-transform: translateX(-350px);
+      -o-transform: translateX(-350px);
+      transform: translateX(-350px);
+      padding-top: 4em; 
+      padding-left: 1em;
+      padding-right: 1em;} }
   #colorlib-aside .author-img {
     width: 150px;
     height: 150px;
@@ -102,10 +104,14 @@ figure {
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
-    border-radius: 50%; }
+    border-radius: 50%; 
+    image-rendering: -webkit-optimize-contrast;
+  }
   #colorlib-aside .email {
     display: block;
-    font-size: 12px;}
+    font-size: 12px;
+    margin-bottom: .5em;
+  }
   #colorlib-aside .number {
     display: block;
     margin-bottom: 2em;
@@ -219,11 +225,12 @@ figure {
             color: #2c98f0; }
 
 .container-wrap {
-  max-width: 1170px;
-  margin: 0 auto; }
+  max-width: 1370px;
+  margin: 0 auto; 
+}
 
 #colorlib-main {
-  width: calc(100% - 300px);
+  width: calc(100% - 350px);
   float: right;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
@@ -231,7 +238,7 @@ figure {
   @media screen and (max-width: 768px) {
     #colorlib-main {
       width: 100%;
-      padding: 0 1em; } }
+       } }
 
 #colorlib-hero {
   min-height: 500px;
@@ -292,7 +299,8 @@ figure {
         position: relative; }
         @media screen and (max-width: 768px) {
           #colorlib-hero .flexslider .slider-text > .slider-text-inner {
-            text-align: center; } }
+            text-align: right; 
+            vertical-align: bottom;} }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1, #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
           margin: 0;
           padding: 0;
@@ -300,12 +308,33 @@ figure {
           font-family: "Playfair Display", Georgia, serif; }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
           margin-bottom: 20px;
-          font-size: 60px;
+          margin-right: 57%;
+          font-size: 80px;
           line-height: 1.3;
           font-weight: 700; }
+          @media screen and (max-width: 2400px) {
+            #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
+              font-size: 60px; } }
+          @media screen and (max-width: 1790px) {
+            #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
+              font-size: 50px; } }
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
-              font-size: 28px; } }
+              margin-right: 0%;
+              font-size: 30px; 
+              font-weight: 1000;
+              text-align: right;
+              color:#fff}; }
+        #colorlib-hero .flexslider .slider-text > .slider-text-inner h5 {
+          margin-bottom: 20px;
+          font-size: 100px;
+          line-height: 1.3;
+          font-weight: 700; 
+          text-align: center;}
+          @media screen and (max-width: 768px) {
+            #colorlib-hero .flexslider .slider-text > .slider-text-inner h5 {
+                    text-align: center;
+                    font-size: 28px; } }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
           font-size: 18px;
           line-height: 1.5;
@@ -327,23 +356,28 @@ figure {
         #colorlib-hero .flexslider .slider-text > .slider-text-inner p {
           margin-bottom: 0; }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
-          font-size: 12px;
-          text-transform: uppercase;
+          font-size: 20px;
+          text-transform: none;
+          font-family: 'Urbanist', sans-serif;
           letter-spacing: 2px;
           color: #000;
           padding: 10px 15px !important;
           border: none;
-          font-weight: 400; }
+          font-weight: 450; }
           #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn {
             color: #000;
-            border: 1px solid #000;
+            border: 3px solid #000;
             background: transparent !important; }
             #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn:hover {
+              font-size: 23px;
+              color:rgb(0, 204, 78);
               background: transparent !important;
-              border: 1px solid #000 !important; }
+              border: 6px solid rgb(0, 204, 78) !important; }
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
-              width: 100%; } }
+              width: 50%;  
+              color:rgb(0, 204, 78);
+            } }
 
 body.offcanvas {
   overflow-x: hidden; }
@@ -369,7 +403,7 @@ body.offcanvas {
   padding: 0 2.5em; }
   @media screen and (max-width: 768px) {
     .colorlib-narrow-content {
-      padding: 0; } }
+      padding: 0 2em; } }
 
 .no-gutters {
   margin: 0;
@@ -397,8 +431,8 @@ body.offcanvas {
     .colorlib-about,
     .colorlib-services,
     .colorlib-contact {
-      padding-top: 5em;
-      padding-bottom: 8em; } }
+      padding-top: 2em;
+      padding-bottom: 2em; } }
 
 .author-img {
   background-size: cover;
@@ -566,9 +600,23 @@ body.offcanvas {
   .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-3 {
     background: #f9bf3f; }
   .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-4 {
-    background: #a84cb8; }
+    background: #31f36b; }
   .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-5 {
     background: #2fa499; }
+  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.edu-1 {
+    background: #4d9aff; }
+  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.edu-2 {
+  background: #376db4; }
+  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.edu-3 {
+    background: #21416b; }
+  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.work-1 {
+    background: #2bd35e; }
+  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.work-2 {
+    background: #23aa4c; }
+  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.work-3 {
+    background: #186d31; }
+  .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.work-4 {
+    background: #0d3a1a; }
   .timeline-centered .timeline-entry .timeline-entry-inner .timeline-icon.color-none {
     background: #fff;
     width: 20px;
@@ -651,6 +699,18 @@ body.offcanvas {
     border-bottom: 2px solid #2fa499; }
   .services.color-6 {
     border-bottom: 2px solid #4054b2; }
+  .services.expertise-1 {
+    border-bottom: 2px solid #ee5454; }
+  .services.expertise-2 {
+    border-bottom: 2px solid #d44b4b; }
+  .services.expertise-3 {
+    border-bottom: 2px solid #be4444; }
+  .services.expertise-4 {
+    border-bottom: 2px solid #9e3838; }
+  .services.expertise-5 {
+    border-bottom: 2px solid #792b2b; }
+  .services.expertise-6 {
+    border-bottom: 2px solid #5a2020; }
 
 .services {
   margin-bottom: 80px;
@@ -730,6 +790,48 @@ body.offcanvas {
       border-color: transparent transparent #4054b2 transparent; }
     .services.color-6 .icon:after {
       border-color: #4054b2 transparent transparent transparent; }
+      
+      .services.expertise-1 .icon {
+        background: #ee5454; }
+        .services.expertise-1 .icon:before {
+          border-color: transparent transparent #ee5454 transparent; }
+          .services.expertise-1 .icon:after {
+          border-color: #ee5454 transparent transparent transparent; }
+
+          .services.expertise-2 .icon {
+            background: #d44b4b; }
+            .services.expertise-2 .icon:before {
+              border-color: transparent transparent #d44b4b transparent; }
+              .services.expertise-2 .icon:after {
+              border-color: #d44b4b transparent transparent transparent; }
+
+              .services.expertise-3 .icon {
+                background: #be4444; }
+                .services.expertise-3 .icon:before {
+                  border-color: transparent transparent #be4444 transparent; }
+                  .services.expertise-3 .icon:after {
+                  border-color: #be4444 transparent transparent transparent; }
+
+                  .services.expertise-4 .icon {
+                    background: #9e3838; }
+                    .services.expertise-4 .icon:before {
+                      border-color: transparent transparent #9e3838 transparent; }
+                      .services.expertise-4 .icon:after {
+                      border-color: #9e3838 transparent transparent transparent; }
+
+                      .services.expertise-5 .icon {
+                        background: #792b2b; }
+                        .services.expertise-5 .icon:before {
+                          border-color: transparent transparent #792b2b transparent; }
+                          .services.expertise-5 .icon:after {
+                          border-color: #792b2b transparent transparent transparent; }
+
+                          .services.expertise-6 .icon {
+                            background: #5a2020; }
+                            .services.expertise-6 .icon:before {
+                              border-color: transparent transparent #5a2020 transparent; }
+                              .services.expertise-6 .icon:after {
+                              border-color: #5a2020 transparent transparent transparent; }
 
 .progress-wrap h3 {
   font-size: 16px;
@@ -944,7 +1046,7 @@ body.offcanvas {
     bottom: 0;
     left: 0;
     right: 0;
-    background: #2c98f0;
+    background: #383838;
     opacity: 0;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
@@ -1007,9 +1109,9 @@ body.offcanvas {
     @media screen and (max-width: 768px) {
       .project .desc {
         opacity: 1;
-        background: rgba(0, 0, 0, 0.4); }
+        background: rgba(0, 0, 0, 0.8); }
         .project .desc h3 {
-          font-style: 28px;
+          font-style: 30px;
           -webkit-transform: translate3d(0, 0, 0);
           transform: translate3d(0, 0, 0);
           color: #000; }
