--- a/src/App.css
+++ b/src/App.css
@@ -23,10 +23,41 @@
   color: #61dafb;
 }
 
+.email-text {
+  font-family: 'Urbanist', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  margin-top: 0px;
+  margin-bottom: 5%;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
+.icon-text {
+  margin-top: 5%;
+  margin-bottom: 5%;
+  margin-right: 0px;
+  margin-left: 0px;
+}
+
 .urbanist-500 {
   font-family: 'Urbanist', sans-serif;
   font-style: normal;
   font-weight: 500;
+}
+
+.box-1 {
+  width:200px;
+	height:200px;
+	margin:10px;
+	padding:10px;
+  background:#c00;
+}
+
+.box-1 p {
+  white-space:pre;
+	font-size:smaller;
+	font-family:monospace;
 }
 
 .urbanist-italics-500 {
