--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,8 @@ figure {
         @media screen and (max-width: 768px) {
           #colorlib-hero .flexslider .slider-text > .slider-text-inner {
             text-align: right; 
-            vertical-align: bottom;} }
+            vertical-align: bottom;
+            padding: 1.0em;} }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1, #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
           margin: 0;
           padding: 0;
@@ -372,7 +373,6 @@ figure {
               #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn {
                 width: 62%;  
                 color:#fff;
-                padding: 5px 5px !important;
                 border: 3px solid #fff;
               } }
             #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn:hover {
