--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ figure {
     display: block;
     width: 100%; }
     #colorlib-aside #colorlib-main-menu .collapse {
-      display: block !important; }
+      display: initial !important; }
     #colorlib-aside #colorlib-main-menu ul {
       text-align: center;
       margin: 0;
