--- a/css/style.css
+++ b/css/style.css
@@ -338,10 +338,16 @@ figure {
               color:#fff}; }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner2 h5 {
           margin-bottom: 20px;
-          font-size: 100px; 
+          font-size: 125px; 
           line-height: 1.3;
           font-weight: 700; 
           text-align: center;}
+          @media screen and (max-width: 2300px) {
+            #colorlib-hero .flexslider .slider-text > .slider-text-inner2 h5 {
+              font-size: 90px; } }
+          @media screen and (max-width: 1820px) {
+            #colorlib-hero .flexslider .slider-text > .slider-text-inner2 h5 {
+              font-size: 75px; } }
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner2 h5 {
                     text-align: center;
@@ -1065,7 +1071,7 @@ body.offcanvas {
   background-position: center center;
   background-repeat: no-repeat;
   position: relative;
-  height: 300px;
+  height: 350px;
   width: 100%;
   display: block;
   margin-bottom: 30px; }
@@ -1075,7 +1081,7 @@ body.offcanvas {
     bottom: 0;
     left: 0;
     right: 0;
-    background: #383838;
+    background: #ffffff;
     opacity: 0;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
@@ -1084,7 +1090,7 @@ body.offcanvas {
       padding: 20px;
       display: block;
       position: relative;
-      height: 300px; }
+      height: 350px; }
       .project .desc .con .icon {
         position: absolute;
         bottom: 20px;
@@ -1094,21 +1100,20 @@ body.offcanvas {
           display: inline;
           padding-right: 5px; }
           .project .desc .con .icon span a {
-            color: #333333;
+            color: #ffffff;
             padding: 5px;
-            background: rgba(255, 255, 255, 0.5);
+            background: rgb(34, 65, 153);
             -webkit-border-radius: 4px;
             -moz-border-radius: 4px;
             -ms-border-radius: 4px;
             border-radius: 4px; }
         .project .desc .con .icon i {
           font-size: 16px;
-          color: #333333; }
+          color: #ffffff; }
     .project .desc h3 {
-      font-family: "Quicksand", Arial, sans-serif;
-      font-size: 16px;
-      font-weight: 500;
-      text-transform: uppercase;
+      font-family: 'Urbanist', sans-serif;
+      font-size: 23px;
+      font-weight: 800;
       letter-spacing: 1px;
       -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
       -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
@@ -1120,11 +1125,12 @@ body.offcanvas {
       transform: translate3d(0, -15px, 0);
       margin-bottom: 15px; }
       .project .desc h3 a {
-        color: #fff; }
+        color: rgb(0, 0, 0); }
     .project .desc span {
+      font-family: 'Urbanist', sans-serif;
       display: block;
-      color: rgba(255, 255, 255, 0.7);
-      font-size: 13px;
+      color: rgb(0, 0, 0);
+      font-size: 15px;
       -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
       -webkit-transition: opacity 0.3s, -webkit-transform 0.3s;
       transition: opacity 0.3s, -webkit-transform 0.3s;
@@ -1136,25 +1142,47 @@ body.offcanvas {
       .project .desc span a {
         color: #000; }
     @media screen and (max-width: 768px) {
-      .project .desc {
-        opacity: 1;
-        background: rgba(0, 0, 0, 0.8); }
-        .project .desc h3 {
-          font-style: 30px;
-          -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
-          color: #000; }
-        .project .desc span {
-          -webkit-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0); } }
-  .project:hover .desc {
-    opacity: 1; }
-    .project:hover .desc h3 {
-      -webkit-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0); }
-    .project:hover .desc span {
-      -webkit-transform: translate3d(0, 0, 0);
-      transform: translate3d(0, 0, 0); }
+      .project {
+        height: 500px;
+        }
+        .project .desc {
+          opacity: 1;
+          background: rgba(0, 0, 0, 0.9); }
+        .project .desc .con {
+          height: 500px}
+          .project .desc h3 {
+            font-style: 30px;
+            -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+            color: rgb(219, 219, 219); }
+            .project .desc h3 a {
+              font-style: 30px;
+              -webkit-transform: translate3d(0, 0, 0);
+              transform: translate3d(0, 0, 0);
+              color: rgb(219, 219, 219); }
+          .project .desc span {
+            color: rgb(235, 235, 235);
+            -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0); } 
+            .project .desc .con .icon span a {
+              color: #141414;
+              padding: 5px;
+              background: rgb(216, 216, 216);
+              -webkit-border-radius: 4px;
+              -moz-border-radius: 4px;
+              -ms-border-radius: 4px;
+              border-radius: 4px; }
+          .project .desc .con .icon i {
+            font-size: 16px;
+            color: #111111; }}
+    .project:hover .desc {
+      opacity: 1.0; }
+      .project:hover .desc h3 {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0); }
+      .project:hover .desc span {
+        -webkit-transform: translate3d(0, 0, 0);
+        transform: translate3d(0, 0, 0); }
 
 .btn-load-more {
   width: 100%; }
