--- a/css/style.css
+++ b/css/style.css
@@ -93,14 +93,14 @@ figure {
       -ms-transform: translateX(-350px);
       -o-transform: translateX(-350px);
       transform: translateX(-350px);
-      padding-top: 4em; 
+      padding-top: 2em; 
       padding-left: 1em;
       padding-right: 1em;} }
   #colorlib-aside .author-img {
     width: 150px;
     height: 150px;
     margin: 0 auto;
-    margin-bottom: 30px;
+    margin-bottom: 1.5em;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
@@ -117,19 +117,27 @@ figure {
     margin-bottom: 2em;
     font-size: 12px;}  
   #colorlib-aside #colorlib-logo {
-    text-align: right;
-    font-weight: 700;
+    text-align: center;
+    font-weight: 800;
     font-size: 30px;
-    margin-bottom: .5em;
+    margin-bottom: .3em;
     display: block;
     width: 100%; }
+    @media screen and (max-width: 768px) {
+      #colorlib-aside #colorlib-logo  {
+        text-align: center;
+        font-weight: 600;
+        font-size: 25px;
+        margin-bottom: .3em;
+        display: block;
+        width: 100%; } }
     #colorlib-aside #colorlib-logo a {
       display: block;
       text-align: center;
       color: #000;
       padding-right: .3em; }
   #colorlib-aside #colorlib-main-menu {
-    display: block;
+    display: initial;
     width: 100%; }
     #colorlib-aside #colorlib-main-menu .collapse {
       display: initial !important; }
@@ -139,12 +147,12 @@ figure {
       padding: 0; }
       @media screen and (max-width: 768px) {
         #colorlib-aside #colorlib-main-menu ul {
-          margin: 0 0 2em 0; } }
+          margin: 0 0 0 0; } }
       #colorlib-aside #colorlib-main-menu ul li {
-        margin: 0 0 10px 0;
+        margin: 0 0 15px 0;
         padding: 0;
         list-style: none;
-        font-size: 12px;
+        font-size: 15px;
         font-weight: 500;
         text-transform: uppercase;
         letter-spacing: 1px; }
@@ -153,14 +161,14 @@ figure {
           text-decoration: none;
           position: relative;
           padding: 10px 0;
-          font-family: "Quicksand", Arial, sans-serif;
+          font-family: 'Urbanist', sans-serif;
           -webkit-transition: 0.3s;
           -o-transition: 0.3s;
           transition: 0.3s; }
           #colorlib-aside #colorlib-main-menu ul li a:after {
             content: "";
             position: absolute;
-            height: 1px;
+            height: 2px;
             bottom: 7px;
             left: 0;
             right: 0;
