--- a/css/style.css
+++ b/css/style.css
@@ -137,15 +137,13 @@ figure {
       color: #000;
       padding-right: .3em; }
   #colorlib-aside #colorlib-main-menu {
-    display: block;
-    margin-bottom: 15px;
+    display: block !important;
     width: 100%; }
     #colorlib-aside #colorlib-main-menu .collapse {
-      display: block !important; 
-      margin-bottom: 15px;}
+      display: initial !important; }
     #colorlib-aside #colorlib-main-menu ul {
       text-align: center;
-      margin-bottom: 15px;
+      margin: 0;
       padding: 0; }
       @media screen and (max-width: 768px) {
         #colorlib-aside #colorlib-main-menu ul {
