--- a/css/style.css
+++ b/css/style.css
@@ -328,38 +328,26 @@ figure {
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
           margin-bottom: 20px;
           margin-right: 57%;
-          font-size: 80px;
+          font-size: 3.5vw;
           line-height: 1.3;
           font-weight: 700; }
-          @media screen and (max-width: 2400px) {
-            #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
-              font-size: 60px; } }
-          @media screen and (max-width: 1790px) {
-            #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
-              font-size: 50px; } }
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
               margin-right: 0%;
-              font-size: 30px; 
+              font-size: 7vw; 
               font-weight: 1000;
               text-align: right;
               color:#fff}; }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner2 h5 {
           margin-bottom: 20px;
-          font-size: 125px; 
+          font-size: 4.5vw; 
           line-height: 1.3;
           font-weight: 700; 
           text-align: center;}
-          @media screen and (max-width: 2300px) {
-            #colorlib-hero .flexslider .slider-text > .slider-text-inner2 h5 {
-              font-size: 90px; } }
-          @media screen and (max-width: 1820px) {
-            #colorlib-hero .flexslider .slider-text > .slider-text-inner2 h5 {
-              font-size: 75px; } }
           @media screen and (max-width: 768px) {
             #colorlib-hero .flexslider .slider-text > .slider-text-inner2 h5 {
-                    text-align: center;
-                    font-size: 185% } }
+                    font-size: 7.3vw; 
+                    text-align: center;} }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h2 {
           font-size: 18px;
           line-height: 1.5;
@@ -516,6 +504,13 @@ body.offcanvas {
   text-transform: uppercase;
   letter-spacing: 5px;
   font-weight: 500; }
+
+.about-desc p {
+  font-size: 20px;
+  font-family: 'Urbanist', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+}
 
 .hire {
   padding: 2em;
