--- a/css/style.css
+++ b/css/style.css
@@ -327,8 +327,8 @@ figure {
           font-family: "Playfair Display", Georgia, serif; }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner h1 {
           margin-bottom: 20px;
-          margin-right: 57%;
-          font-size: 3.5vw;
+          margin-right: 50%;
+          font-size: 3.2vw;
           line-height: 1.3;
           font-weight: 700; }
           @media screen and (max-width: 768px) {
@@ -369,11 +369,10 @@ figure {
         #colorlib-hero .flexslider .slider-text > .slider-text-inner p {
           margin-bottom: 0; }
         #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn {
-          font-size: 20px;
+          font-size: 1.5vw;
           transition: all 0.5s ease-out;
           text-transform: none;
           font-family: 'Urbanist', sans-serif;
-          letter-spacing: 2px;
           color: #000;
           padding: 10px 15px !important;
           border: none;
@@ -390,8 +389,8 @@ figure {
                 border: 2px solid #fff;
               } }
             #colorlib-hero .flexslider .slider-text > .slider-text-inner .btn.btn-learn:hover {
-              font-size: 23px;
-              padding: 10px 90px !important;
+              font-size: 1.5vw;
+              padding: 1vh 3vw !important;
               color:rgb(0, 204, 78);
               background: transparent !important;
               border: 6px solid rgb(0, 204, 78) !important;
