--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3618,6 +3618,7 @@ tbody.collapse.in {
   border-top: 1px solid transparent;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
   -webkit-overflow-scrolling: touch;
+  overflow: scroll;
 }
 .navbar-collapse:before, .navbar-collapse:after {
   content: " ";
@@ -5337,6 +5338,7 @@ button.close {
   left: 0;
   z-index: 1050;
   -webkit-overflow-scrolling: touch;
+  overflow: scroll;
   outline: 0;
 }
 .modal.fade .modal-dialog {
